--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@ TODO: Change the background color for each device
       body {
         background-color: aquamarine;
       }
+
+      @media (min-width: 319px) and (max-width: 480px) {
+        body {
+          background-color: lightsalmon;
+        }
+      }
+
+      @media (min-width: 481px) and (max-width: 1200px) {
+        body {
+          background-color: powderblue;
+        }
+      }
     </style>
   </head>
 
