--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ TODO: Change the background color for each device
     />
     <title>Media Query</title>
     <style>
+      body {
+        background-color: antiquewhite;
+      }
+
       @media (min-width: 319px) and (max-width: 480px) {
         body {
           background-color: lightsalmon;
